force-app/main/default/objects/Assessment_Answer__c/Assessment_Answer__c.object-meta.xml
<CustomObject>
    <label>Assessment Answer</label>
    <nameField>
        <displayFormat>AA-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessment Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>