force-app/main/default/objects/Assessment_Answer__c/fields/Assessment_Question__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Question__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <label>Assessment Question</label>
    <referenceTo>Question_Master__c</referenceTo>
    <relationshipLabel>Assessment Answers</relationshipLabel>
    <relationshipName>Assessment_Answers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>