force-app/main/default/objects/Assessment_Answer__c/fields/Secondary_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Assessment__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <label>Secondary Assessment</label>
    <referenceTo>SecondaryAssessment__c</referenceTo>
    <relationshipLabel>Assessment Answers</relationshipLabel>
    <relationshipName>Assessment_Answers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>